--- a/The Information.html
+++ b/The Information.html
@@ -1,48 +1,20 @@
 <!DOCTYPE html>
 <!-- saved from url=(0031)https://www.theinformation.com/ -->
 <html class=" js svg"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<script async="" src="./The Information_files/analytics.js"></script><script type="text/javascript" async="" src="./The Information_files/mixpanel-2.2.min.js"></script><script src="./The Information_files/1890380756.js"></script><style type="text/css"></style>
 <meta charset="utf-8">
 <meta content="IE=edge" http-equiv="X-UA-Compatible">
-<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"beacon-3.newrelic.com","errorBeacon":"bam.nr-data.net","licenseKey":"28541fb66a","applicationID":"4241969","transactionName":"cFZaQkZcX14BRklUQ0dQV1pRQBxbClADTQ==","queueTime":5,"applicationTime":27,"agentToken":null,"agent":"js-agent.newrelic.com/nr-476.min.js"}</script>
-<script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function(t,e,n){function r(n){if(!e[n]){var o=e[n]={exports:{}};t[n][0].call(o.exports,function(e){var o=t[n][1][e];return r(o?o:e)},o,o.exports)}return e[n].exports}if("function"==typeof __nr_require)return __nr_require;for(var o=0;o<n.length;o++)r(n[o]);return r}({QJf3ax:[function(t,e){function n(t){function e(e,n,a){t&&t(e,n,a),a||(a={});for(var c=u(e),f=c.length,s=i(a,o,r),p=0;f>p;p++)c[p].apply(s,n);return s}function a(t,e){f[t]=u(t).concat(e)}function u(t){return f[t]||[]}function c(){return n(e)}var f={};return{on:a,emit:e,create:c,listeners:u,_events:f}}function r(){return{}}var o="nr@context",i=t("gos");e.exports=n()},{gos:"7eSDFh"}],ee:[function(t,e){e.exports=t("QJf3ax")},{}],gos:[function(t,e){e.exports=t("7eSDFh")},{}],"7eSDFh":[function(t,e){function n(t,e,n){if(r.call(t,e))return t[e];var o=n();if(Object.defineProperty&&Object.keys)try{return Object.defineProperty(t,e,{value:o,writable:!0,enumerable:!1}),o}catch(i){}return t[e]=o,o}var r=Object.prototype.hasOwnProperty;e.exports=n},{}],D5DuLP:[function(t,e){function n(t,e,n){return r.listeners(t).length?r.emit(t,e,n):(o[t]||(o[t]=[]),void o[t].push(e))}var r=t("ee").create(),o={};e.exports=n,n.ee=r,r.q=o},{ee:"QJf3ax"}],handle:[function(t,e){e.exports=t("D5DuLP")},{}],XL7HBI:[function(t,e){function n(t){var e=typeof t;return!t||"object"!==e&&"function"!==e?-1:t===window?0:i(t,o,function(){return r++})}var r=1,o="nr@id",i=t("gos");e.exports=n},{gos:"7eSDFh"}],id:[function(t,e){e.exports=t("XL7HBI")},{}],loader:[function(t,e){e.exports=t("G9z0Bl")},{}],G9z0Bl:[function(t,e){function n(){var t=l.info=NREUM.info;if(t&&t.agent&&t.licenseKey&&t.applicationID&&c&&c.body){l.proto="https"===p.split(":")[0]||t.sslForHttp?"https://":"http://",a("mark",["onload",i()]);var e=c.createElement("script");e.src=l.proto+t.agent,c.body.appendChild(e)}}function r(){"complete"===c.readyState&&o()}function o(){a("mark",["domContent",i()])}function i(){return(new Date).getTime()}var a=t("handle"),u=window,c=u.document,f="addEventListener",s="attachEvent",p=(""+location).split("?")[0],l=e.exports={offset:i(),origin:p,features:{}};c[f]?(c[f]("DOMContentLoaded",o,!1),u[f]("load",n,!1)):(c[s]("onreadystatechange",r),u[s]("onload",n)),a("mark",["firstbyte",i()])},{handle:"D5DuLP"}]},{},["G9z0Bl"]);</script>
 <title>The Information</title>
 <meta content="width=device-width" name="viewport">
 <link href="https://www.theinformation.com/assets/application-ed707308d0709a1b4db3d9161e7c2dc8.css" media="screen" rel="stylesheet"><link href="https://www.theinformation.com/styles/inhouse.css" media="screen" rel="stylesheet">
 <link href="https://www.theinformation.com/scripts/atwho.css" media="screen" rel="stylesheet">
-<link href="./The Information_files/print.css" media="print" rel="stylesheet" type="text/css">
-<script src="./The Information_files/jspdf.min.js"></script>
-<meta content="authenticity_token" name="csrf-param">
-<meta content="MeUAE0nb/eiB8d2tZ0tketpC8BTDAMpmyBJKbk+EV70=" name="csrf-token"><link href="https://www.theinformation.com/feed" rel="alternate" title="The Information" type="application/atom+xml"><meta content="The Information is a subscription publication for professionals who need the inside scoop on technology news and trends. We focus on the stories that drive conversations and help our subscribers get ahead." name="description">
-<meta content="https://dmxvlyap9srmn.cloudfront.net/production/articles/129/large_large_large_theinformation.png" prefix="og: http://ogp.me/ns#" property="og:image">
-<meta content="website" prefix="og: http://ogp.me/ns#" property="og:type">
-<meta content="The Information" prefix="og: http://ogp.me/ns#" property="og:site_name">
-<meta content="The Information" prefix="og: http://ogp.me/ns#" property="og:title">
-<meta content="The Information is a subscription publication for professionals who need the inside scoop on technology news and trends. We focus on the stories that drive conversations and help our subscribers get ahead." prefix="og: http://ogp.me/ns#" property="og:description">
-<script src="./The Information_files/modernizr.js"></script>
-<script type="text/javascript">(function(e,b){if(!b.__SV){var a,f,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
-for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=e.createElement("script");a.type="text/javascript";a.async=!0;a.src=("https:"===e.location.protocol?"https:":"http:")+'//cdn.mxpnl.com/libs/mixpanel-2.2.min.js';f=e.getElementsByTagName("script")[0];f.parentNode.insertBefore(a,f)}})(document,window.mixpanel||[]);
-mixpanel.init("3184ccc0435e8036b68c21fb76ae6cc4");</script><script src="chrome-extension://nefmiafkffhmjodlpcdajhjehhciodfj/init.js"></script><style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
-.en-markup-crop-options {
-    top: 18px !important;
-    left: 50% !important;
-    margin-left: -100px !important;
-    width: 200px !important;
-    border: 2px rgba(255,255,255,.38) solid !important;
-    border-radius: 4px !important;
-}
-
-.en-markup-crop-options div div:first-of-type {
-    margin-left: 0px !important;
-}
-</style></head>
+</head>
 <body>
 <div class="container">
 <nav class="navbar navbar-default hidden-xs hidden-print" role="navigation" style="padding-bottom:20px;margin-bottom:10px;">
 <div class="navbar-header">
 <a class="navbar-brand" href="./The Information_files/The Information.html">
-<img alt="The Information logo" class="logo-lg" src="./The Information_files/the-information-logo.svg">
-<img alt="The Information logo" class="logo-sm" src="./The Information_files/the-information-icon.svg">
+<img alt="The Information logo" class="logo-lg" src="https://www.theinformation.com/images/the-information-logo.svg">
+<img alt="The Information logo" class="logo-sm" src="https://www.theinformation.com/images/the-information-icon.svg">
 </a>
 </div>
 <div id="main-nav">
@@ -98,11 +70,13 @@ mixpanel.init("3184ccc0435e8036b68c21fb76ae6cc4");</script><script src="chrome-e
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
 </button>
+
 <a class="navbar-brand" href="./The Information_files/The Information.html" style="width:65%;">
 <img alt="The Information logo" class="logo-lg" src="./The Information_files/the-information-logo.svg" style="width:500px!important;">
 <img alt="The Information logo" class="logo-sm" src="./The Information_files/the-information-logo.svg" style="width:90%!important;">
 </a>
 </div>
+
 <div class="collapse navbar-collapse" id="main-nav" style="background: #f2f2f2!important;">
 <ul class="nav navbar-nav main-nav-list-2" style="font-family: &#39;Meta Normal&#39;;text-align:center;">
 <li>
@@ -834,24 +808,4 @@ The most valuable source of news about the technology industry for the world’s
   }
   }
 </style>
-<script type="text/javascript">(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
- (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga("create", "UA-46194836-1", "www.theinformation.com");
-ga("send", "pageview", {
-  "dimension1": "-1",
-  "dimension2": ""
-});</script><script src="./The Information_files/application-a01331e87297c5405c3e234d7d34b678.js"></script><div style="display: none;"></div><script src="./The Information_files/d3.min.js"></script><script src="./The Information_files/underscore-min.js"></script><script src="./The Information_files/jquery-scrollto.js"></script><script src="./The Information_files/jquery.caret.min.js"></script><script src="./The Information_files/jquery.atwho.js"></script><script src="./The Information_files/jquery.linkify.min.js"></script><script src="./The Information_files/bootstrap.min.js"></script><script type="text/javascript">
-$('#show_convincer').click(function () { 
-  $( "#convincing" ).slideToggle( "slow",function(){
-      if ($('#show_convincer').html() == 'Collapse ↑') {
-        $('#show_convincer').html('Why Subscribe &darr;');
-      }
-      else {
-        $('#show_convincer').html('Collapse &uarr;');
-      }
-      });});</script>
-<link href="https://www.theinformation.com/styles/jquery.mentionsInput.css" rel="stylesheet">
-<script src="./The Information_files/nr-476.min.js"></script><script type="text/javascript" src="./The Information_files/28541fb66a"></script></body></html>
+</body></html>
