--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ mixpanel.track("Visited Homepage", {'login_status' : "Not Logged In"});
 網路的出現讓媒體製造成本降到接近零，人人都能成為媒體。在資訊爆炸下，人們面臨資訊多到無法消化的困境，必須在有限的兩種資源 ─ 金錢與時間 ─ 中做出選擇...
 </p>
 <a class="feat-artcl-lg-cont-read" href="">Read more</a>
-<p class="article-author" style="font-family:&#39;Meta Bold&#39;!important;margin-top:14px;"><a href="https://www.theinformation.com/Salesforce-s-Slowing-Growth-Spotlights-Cost-of-M-A">
+<p class="article-author" style="font-family:&#39;Meta Bold&#39;!important;margin-top:14px;"><a href="">
 By
 <span class="p-author" style="display:inline!important;&#39;"></span></a>
 <a class="author_link" href="">YC</a>
