Updated index and login link button

--- a/index-logined.html
+++ b/index-logined.html
@@ -194,7 +194,7 @@ By
 <div id="older_articles">
 
 <div class="row article-excerpt h-entry" data-timestamp="1416841213" id="1416841213">
-	<div class="hidden-xs"><a class="u-url" href="">
+	<div class="hidden-xs"><a class="u-url" href="content-logined.html">
 	<div class="col-md-4 col-xs-6 article-excerpt-img">
 	<img alt="Thumb" class="u-photo" src="timthumb.jpg">
 	</div></a>
@@ -208,7 +208,7 @@ By
 </div>
 
 <div class="row article-excerpt h-entry" data-timestamp="1416841213" id="1416841213">
-	<div class="hidden-xs"><a class="u-url" href="">
+	<div class="hidden-xs"><a class="u-url" href="content-logined.html">
 	<div class="col-md-4 col-xs-6 article-excerpt-img">
 	<img alt="Thumb" class="u-photo" src="timthumb1.jpg">
 	</div></a>
@@ -222,7 +222,7 @@ By
 </div>
 
 <div class="row article-excerpt h-entry" data-timestamp="1416841213" id="1416841213">
-	<div class="hidden-xs"><a class="u-url" href="">
+	<div class="hidden-xs"><a class="u-url" href="content-logined.html">
 	<div class="col-md-4 col-xs-6 article-excerpt-img">
 	<img alt="Thumb" class="u-photo" src="timthumb2.jpg">
 	</div></a>
