--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ By
 <div id="older_articles">
 
 <div class="row article-excerpt h-entry" data-timestamp="1416841213" id="1416841213">
-	<div class="hidden-xs"><a class="u-url" href="">
+	<div class="hidden-xs"><a class="u-url" href="content.html">
 	<div class="col-md-4 col-xs-6 article-excerpt-img">
 	<img alt="Thumb" class="u-photo" src="timthumb.jpg">
 	</div></a>
@@ -177,7 +177,7 @@ By
 </div>
 
 <div class="row article-excerpt h-entry" data-timestamp="1416841213" id="1416841213">
-	<div class="hidden-xs"><a class="u-url" href="">
+	<div class="hidden-xs"><a class="u-url" href="content.html">
 	<div class="col-md-4 col-xs-6 article-excerpt-img">
 	<img alt="Thumb" class="u-photo" src="timthumb1.jpg">
 	</div></a>
@@ -191,9 +191,9 @@ By
 </div>
 
 <div class="row article-excerpt h-entry" data-timestamp="1416841213" id="1416841213">
-	<div class="hidden-xs"><a class="u-url" href="">
+	<div class="hidden-xs"><a class="u-url" href="content.html">
 	<div class="col-md-4 col-xs-6 article-excerpt-img">
-	<img alt="Thumb" class="u-photo" src="timthumb1.jpg">
+	<img alt="Thumb" class="u-photo" src="timthumb2.jpg">
 	</div></a>
 	<div class="col-md-8 col-xs-6 article-excerpt-copy">
 	<h5 class="h-slug"><a href="" style="color:#ED403A!important;">電子報</a></h5>
