--- a/login.html
+++ b/login.html
@@ -80,7 +80,9 @@ Keep me logged in
 </div>
 </div>
 <div class='col-sm-12'>
-<input class='btn btn-primary btn-lg info-btn' data-disable-with='Logging In ...' name='commit' type='submit' value='Log In'>
+<input class='btn btn-primary btn-lg info-btn' data-disable-with='Logging In ...' 
+onclick="window.location='index-logined.html';"
+name='commit' type='button' value='Log In'>
 </div>
 </div>
 <div class='side-note col-sm-2'>
