--- a/content.html
+++ b/content.html
@@ -150,7 +150,7 @@
                         專注服務好奇、具世界觀的現代人士的網路原生內容。
                     </div>
                     <div class="col-md-4" style="width:auto;">
-                        <a class="btn btn-primary subscribe-btn" href="subscribe.html" id="subscribe_cta" role="button">現在就訂閱 <font face=symbol>&reg;</font></a>
+                        <a class="btn btn-primary subscribe-btn" href="subscribe.html" id="subscribe_cta" role="button">現在就訂閱 &#8594;</a>
                     </div>
                 </section>
 
@@ -198,49 +198,37 @@
                         <div class="col-md-2">
                             <img src="photo.png">
                         </div>
-                        <h5>
-每月固定的會員專屬活動。台北、新竹舉辦。
-</h5>
+                        <h5>每月固定的會員專屬活動。台北、新竹舉辦。</h5>
                     </div>
                     <div class="col-md-6">
                         <div class="col-md-2">
                             <img src="photo.png">
                         </div>
-                        <h5>
-只為讀者服務的內容，沒有聳動的標題或煽動的內容。
-</h5>
+                        <h5>只為讀者服務的內容，沒有聳動的標題或煽動的內容。</h5>
                     </div>
                     <div class="col-md-6">
                         <div class="col-md-2">
                             <img src="photo.png">
                         </div>
-                        <h5>
-高水準的讀者群。精采的留言與討論。
-</h5>
+                        <h5>高水準的讀者群。精采的留言與討論。</h5>
                     </div>
                     <div class="col-md-6">
                         <div class="col-md-2">
                             <img src="photo.png">
                         </div>
-                        <h5>
-「上周大事」電子報，精選值得您花時間關心的事件、分析。
-</h5>
+                        <h5>「上周大事」電子報，精選值得您花時間關心的事件、分析。</h5>
                     </div>
                     <div class="col-md-6">
                         <div class="col-md-2">
                             <img src="photo.png">
                         </div>
-                        <h5>
-業內最高水準作者心得分享。
-</h5>
+                        <h5>業內最高水準作者心得分享。</h5>
                     </div>
                     <div class="col-md-6">
                         <div class="col-md-2">
                             <img src="photo.png">
                         </div>
-                        <h5>
-我們人比較好。
-</h5>
+                        <h5>我們人比較好。</h5>
                     </div>
                 </section>
 
@@ -328,7 +316,7 @@ Artist
                         專注服務好奇、具世界觀的現代人士的網路原生內容。
                     </div>
                     <div class="col-md-4" style="width:auto;">
-                        <a class="btn btn-primary subscribe-btn" href="subscribe.html" id="subscribe_cta" role="button">現在就訂閱 <font face=symbol>&reg;</font></a>
+                        <a class="btn btn-primary subscribe-btn" href="subscribe.html" id="subscribe_cta" role="button">現在就訂閱 &#8594;</font></a>
                     </div>
                 </section>
 
