--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ mixpanel.track("Visited Homepage", {'login_status' : "Not Logged In"});
                     </div>
                     <div class="col-md-5 col-sm-6 subscribe-btns">
                         <a class="btn btn-primary learn-btn subscribe-link hidden-xs" href="#More" id="learnmore_cta" role="button">了解更多</a>
-                        <a class="btn btn-primary subscribe-btn" href="subscribe.html" id="subscribe_cta" role="button">現在就訂閱 <font face=symbol>&reg;</font></a>
+                        <a class="btn btn-primary subscribe-btn" href="subscribe.html" id="subscribe_cta" role="button">現在就訂閱 &#8594;</a>
                         <a class="btn btn-primary learn-btn subscribe-link visible-xs" href="#More" id="learnmore_cta" role="button" style="margin-top:10px;">了解更多</a>
                     </div>
                 </div>
@@ -226,12 +226,6 @@ mixpanel.track("Visited Homepage", {'login_status' : "Not Logged In"});
             </div>
 
         </div>
-        <style>
-        @media only screen and (min-width: 320px) and (max-width: 1024px) {
-            .feat-artcl-sm-container {
-                min-height: 241px!important;
-            }
-        </style>
     </div>
 
     <div class="info-footer" id="More">
@@ -411,7 +405,7 @@ Artist
                     專注服務好奇、具世界觀的現代人士的網路原生內容。
                 </div>
                 <div class="col-md-4" style="width:auto;">
-                    <a class="btn btn-primary subscribe-btn" href="subscribe.html" id="subscribe_cta" role="button">現在就訂閱 <font face=symbol>&reg;</font></a>
+                    <a class="btn btn-primary subscribe-btn" href="subscribe.html" id="subscribe_cta" role="button">現在就訂閱 &#8594;</a>
                 </div>
             </section>
 
