Updated subscribe button

--- a/subscribe.html
+++ b/subscribe.html
@@ -156,7 +156,8 @@ By subscribing I agree to<br>The Information's
                             </div>
                         </div>
                         <div class='col-sm-12'>
-                            <input class='btn btn-primary btn-lg info-btn' name='commit' type='submit' value='Subscribe'>
+                            <input class='btn btn-primary btn-lg info-btn' name='commit' type='button'
+                                onclick="window.location='index-logined.html';" value='Subscribe'>
                         </div>
                     </fieldset>
                 </form>
